--- a/Mental_health.Rmd
+++ b/Mental_health.Rmd
@@ -35,7 +35,7 @@ tables <- dbListTables(conn)
 ```
 
 
-Loading up the database connection we can see that the database has 3 tables, namely *Answer*, *Question*, *Survey*. Take a few minutes to query around the data you will realize each year has different number of observations and respondents (identified by the *UserID* column in the Answers table). 
+Loading up the database connection we can see that the database has 3 tables, namely *Answer*, *Question*, *Survey*. The *question* table is basically a *key* for indicators which you might find interesting to analyze. Take a few minutes to query around the data you will realize each year has different number of observations and respondents (identified by the *UserID* column in the Answers table). 
 ```{sql, connection=conn, include=TRUE}
 --Preview the tables in the database
 SELECT
@@ -85,9 +85,52 @@ OR Q.questionid==6 OR Q.questionid==78 OR Q.questionid==89);
 
 A quick glance shows how each year there some questions that are not found in another year. Plus the number of respondents is not consistent across the years. It is better to subset each year as a unique dataset.
 
+```{r clean, include=TRUE, warning=FALSE}
+#Pivot the columns longer and rename them
+df.2014<-df.2014%>%
+    pivot_wider(names_from = question,
+                values_from = answer)
+
+df.2014<-df.2014%>%
+    rename(age=`What is your age?`,
+           location=`What country do you live in?`,
+           gender=`What is your gender?`,
+           fam_history_MI=`Do you have a family history of mental illness?`,
+           remote_wrk=`Do you work remotely (outside of an office) at least 50% of the time?`,
+           id=UserID)
 
 
+df.2016<-df.2016%>%
+    pivot_wider(names_from = question,
+                values_from = answer)
 
+df.2016<-df.2016%>%
+    rename(age=`What is your age?`,
+           location=`What country do you live in?`,
+           gender=`What is your gender?`,
+           fam_history_MI=`Do you have a family history of mental illness?`,
+           diagnose=`Have you ever been diagnosed with a mental health disorder?`,
+           remote_wrk=`Do you work remotely?`,
+           id=UserID,
+           position=`Which of the following best describes your work position?`)
+
+df.2017<-df.2017%>%
+    pivot_wider(names_from = question,
+                values_from = answer)
+
+df.2017<-df.2017%>%
+    rename(age=`What is your age?`,
+           location=`What country do you live in?`,
+           gender=`What is your gender?`,
+           fam_history_MI=`Do you have a family history of mental illness?`,
+           identify= `Are you openly identified at work as a person with a mental health issue?`,
+           race=`What is your race?`,
+           id=UserID)
+```
+
+After reshaping our data we see that the 2016 dataset has the most respondents, 1,433 while the 2017 dataset has the fewest, 756. We can also see that the only common indicators are age, gender and location and family mental history. As the respondents differ across the years, it would be unwise to combine the datasets using UserID. But we can analyze each dataset individually and draw comparisons. 
+
+Next step is to manipulate the data and improve consistency. Some indicators, such has race has text and numerical in the same column. 
 
 Once done, do not forget to disconnect the database from your environment.
 ```{r disc, include=TRUE, message=FALSE, warning=FALSE}
