--- a/NYC Property Sales.Rmd
+++ b/NYC Property Sales.Rmd
@@ -29,6 +29,7 @@ library(lubridate)
 library(jsonlite)
 library(readxl)
 library(DataExplorer)
+library(broom)
 
 
 #Load data
@@ -110,12 +111,150 @@ nyc<-nyc%>%
 
 table(nyc$Borough)
 
-plot_histogram(nyc, ggtheme = theme_bw(), ncol = 2)
-plot_bar(nyc, maxcat = 5, ncol = 2,
+plot_bar(nyc, maxcat = 5,
+         ncol = 2,
          ggtheme = theme_bw())
 
 ```
 Very few missing observations (14), and they seem to be from the *Year Built* column. We can go ahead and remove them since they make up just 0.04% of the data.
 
 
-You can also observe that most variables have very huge outliers that skew their charts positively. Going forward, we might need to deal with the outliers. One potential way is by keeping just residential dwellings (building codes can be found [here](https://www1.nyc.gov/assets/finance/jump/hlpbldgcode.html)). Manhattan will see a considerable drop in observations (<span style="color: red;">76%</span>) while the least drop in observations was for Staten Island (<span style="color: red;">2%</span>).  coincidentally lower the number of observations from Manhattan.  
+You can also observe that most variables have very huge outliers that skew their charts positively. Going forward, we might need to deal with the outliers. One potential way is by keeping just residential dwellings (building codes can be found [here](https://www1.nyc.gov/assets/finance/jump/hlpbldgcode.html)). Manhattan will see a considerable drop in observations (<span style="color: red;">76%</span>) while the least drop in observations was for Staten Island (<span style="color: red;">2%</span>).  coincidentally lower the number of observations from Manhattan. 
+
+
+
+```{r outliers, include=TRUE}
+#Residential Units
+quartiles <- quantile(nyc$Residential_units)
+# 75% minus 25% = interquartile range 
+iqr <- quartiles[[4]] - quartiles[[2]]
+# Outlier boundaries
+lower_bound <- quartiles[[2]] - (1.5 * iqr)
+upper_bound <- quartiles[[4]] + (1.5 * iqr)
+
+# Isolate outlier(s)
+res.outliers <- nyc%>% 
+  filter(Residential_units > upper_bound | Residential_units< lower_bound)
+
+#Land
+quartiles <- quantile(nyc$Land_square_feet)
+iqr <- quartiles[[4]] - quartiles[[2]]
+lower_bound <- quartiles[[2]] - (1.5 * iqr)
+upper_bound <- quartiles[[4]] + (1.5 * iqr)
+
+land.outliers <- nyc%>% 
+  filter(Land_square_feet > upper_bound | Land_square_feet< lower_bound)
+
+#Price
+quartiles <- quantile(nyc$Sale_price)
+iqr <- quartiles[[4]] - quartiles[[2]]
+lower_bound <- quartiles[[2]] - (1.5 * iqr)
+upper_bound <- quartiles[[4]] + (1.5 * iqr)
+
+price.outliers <- nyc%>% 
+  filter(Borough=="Bronx")%>%
+  filter(Sale_price > upper_bound | Sale_price< lower_bound)
+```
+
+
+```{r cleaning2, include=TRUE, fig.align='center', fig.width=8}
+#Recode columns to proper data types
+nyc<-nyc%>%
+  mutate(Borough=as.factor(Borough),
+         Neighborhood=as.factor(Neighborhood),
+         Tax_class_at_time_of_sale=as.factor(Tax_class_at_time_of_sale),
+         Zip_code=as.factor(Zip_code),
+         Building_class_at_time_of_sale=as.factor(Building_class_at_time_of_sale),
+         Building_class_category=as.factor(Building_class_category))
+nyc$Address<-NULL
+nyc$Neighborhood<-NULL
+nyc$Zip_code<-NULL
+nyc$Tax_class_at_present<-NULL
+
+
+#Check for multicorrliniality
+numnyc <- names(which(sapply(nyc, is.numeric)))
+corr <- cor(nyc[,numnyc], use = 'pairwise.complete.obs')
+p3<-ggcorrplot(corr, lab = TRUE)
+p3
+
+#Total units has strong relationship with Residential units, so i shall remove it
+nyc$Total_units<-NULL
+
+#Visualize relationship between slae price and gross size
+nyc%>%ggplot(aes(x=Gross_square_feet, y=Sale_price, color=Borough))+
+  geom_point()+
+  theme_bw()+
+  geom_smooth(method = "lm", se = FALSE)+
+  theme(legend.position = "none")+
+  facet_wrap(~Borough, ncol = 2, scales = "free")
+
+#Bronx has two duplicate outliers, remove them
+nyc<-nyc%>%
+  filter(Sale_price!=87400000)
+
+#remove duplicates
+nyc<-nyc%>%
+  distinct()
+
+#Visualize relationship again
+nyc%>%ggplot(aes(x=Gross_square_feet, y=Sale_price, color=Borough))+
+  geom_point()+
+  theme_bw()+
+  geom_smooth(method = "lm", se = FALSE)+
+  theme(legend.position = "none")+
+  scale_y_continuous(labels = comma)+
+  facet_wrap(~Borough, ncol = 2, scales = "free")
+
+#Regression
+nyc_fit<-lm(Sale_price~Borough+Building_class_category+
+              Residential_units+Commercial_units+Land_square_feet+
+              Gross_square_feet+Year_built+Building_class_at_time_of_sale, data=nyc)
+summary(nyc_fit)
+
+
+
+#Generate multiple linear models
+##First nest data by the category
+nyc_nest<-nyc%>%
+  group_by(Borough)%>%
+  nest()
+
+##Second run a liner regression across all categories, using a mapping function
+nyc_nest<-nyc_nest%>%
+  mutate(linear_model=map(.x= data, 
+                          .f= ~lm(Sale_price~Building_class_category+Residential_units+
+                                    Commercial_units+Land_square_feet+Gross_square_feet+
+                                    Year_built+Building_class_at_time_of_sale, data=.)
+                          ))
+
+##Third select the broom function suitable
+#a) Tidy the data
+nyc_nest<-nyc_nest%>%
+  mutate(tidy_coef=map(.x=linear_model,
+                       .f=tidy, conf.int=TRUE))
+
+#Fourth we Unnest
+nyc_nest%>%
+  select(Borough, tidy_coef)%>%
+  unnest(cols = tidy_coef)%>%
+  filter(term=="Gross_square_feet")%>%
+  arrange(estimate)
+
+#This shows that Manhattan has the highest increase in sale price for every increase in gross square feet. Bronx has the lowest
+
+
+#a) glance the data (this has r-squared)
+nyc_nest<-nyc_nest%>%
+  mutate(glance_coef=map(.x=linear_model,
+                       .f=glance))
+
+#we Unnest
+nyc_nest%>%
+  select(Borough, glance_coef)%>%
+  unnest(cols = glance_coef)%>%
+  select(r.squared)%>%
+  arrange(r.squared)
+
+#Brooklyn has the lowest R squared while Manhattan has the highest R Squared
+```
